--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+//responsibe table
+@media(max-width: 800px) {
+  .responsive_table {
+    overflow-x: auto !important;
+  }
+
+  .mat-table {
+    min-width:800px;
+  }
+}
+
+.mat-row {
+  height: auto;
+}
+
+.mat-header-cell,.mat-cell {
+  text-align: center !important;
+  padding: 0px 8px 0px 15px !important;
+}
+
+.black-snackbar {
+  background: black !important;
+  color: white !important;
+}
+
+.green-snackbar {
+  background: #00ff7f !important;
+  color: black !important;
+}
+
+.mat-snack-bar-container {
+  margin-right: auto !important;
+  margin-left: auto !important;
+  width: 40vw !important;
+  min-width: 90% !important;
+  max-width: 100vw !important;
+  margin-top: 70px !important;
+  padding: 20px !important;
+}
+
+.spacer {
+  flex: 1 auto;
+}
+
+@import "../public/assets/styles/style";
